RWA-113: Add listener to Camunda to call task configuration service (#106)
* Simplify request body